@@ -1,3 +1,6 @@
+2015-06-14  Kirit Saelensminde  <kirit@felspar.com>
+ Added variadic versions of `fostlib::push_back` and `fostlib::insert`.
+
 2015-06-10  Kirit Saelensminde  <kirit@felspar.com>
  Add coercions for ascii_string and utf8_string to json.
 
